--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://firefist.github.io/scroll-animation/",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
